src/objects/Project_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non- Marketable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <formula>Project__r.Name + &apos;_&apos; + TowerName__r.Zone_Name__r.Name + &apos;_&apos; + TowerName__r.Name + &apos;_&apos; + UnitNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitNo__c</fullName>
        <label>UnitNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Carpet_Area__c</fullName>
        <label>Unit Carpet Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <label>Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Direction__c</fullName>
        <label>Unit Direction</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East/West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North/East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North.West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West &amp; North East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Feature__c</fullName>
        <label>Unit Feature</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Morgage_Status__c</fullName>
        <label>Unit Morgage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Un-mortgaged</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Size_TAG__c</fullName>
        <label>Unit Size TAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Status__c</fullName>
        <label>Unit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Returned To Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIP - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIP - RM Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_TypeId__c</fullName>
        <label>Unit TypeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_View__c</fullName>
        <label>Unit View</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zoning__c</fullName>
        <label>Zoning</label>
        <picklist>
            <picklistValues>
                <fullName>Global FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferable Base FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non- Transferable Base FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Unit</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Unit_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project_Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bank_mandatory_for_mortgage</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Mortgaged__c = true &amp;&amp;  ISBLANK( Bank__c )  , true, false)</errorConditionFormula>
        <errorDisplayField>Bank__c</errorDisplayField>
        <errorMessage>You must enter value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Car_Parking_Charge</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( ISPICKVAL( Car_Parking_Type__c , &quot;Small Car&quot;),
      ISPICKVAL(Car_Parking_Type__c, &quot;Big Car&quot;)),
      ISBLANK(Car_Parking_Charge__c))</errorConditionFormula>
        <errorDisplayField>Car_Parking_Charge__c</errorDisplayField>
        <errorMessage>Please fill the Car Parking Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Construction_value_between_100</fullName>
        <active>true</active>
        <errorConditionFormula>Construction__c&lt;0 ||  Construction__c &gt;100</errorConditionFormula>
        <errorDisplayField>Construction__c</errorDisplayField>
        <errorMessage>Construction Value must be positive and between or equal to 100.</errorMessage>
    </validationRules>
</CustomObject>